TP-3/ec2.tf
provider "aws" {
  region     = "us-east-1"
  access_key = "ACCESS KEY"
  secret_key = "SECRET KEY"
}

resource "aws_instance" "frazer-ec2" {
  ami             = data.aws_ami.my_ami.id
  instance_type   = var.instance_type
  key_name        = "devops-frazer"
  security_groups = ["${aws_security_group.my_sg.name}"]
  tags = {
    Name = "${var.author}-ec2"
  }

  root_block_device {
    delete_on_termination = true
  }
}

resource "aws_security_group" "my_sg" {
  name        = "${var.author}-sg"
  description = "Allow http and https inbound traffic"
  #vpc_id      = aws_vpc.main.id

  ingress {
    description      = "HTTP from all"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  ingress {
    description      = "HTTPS from all"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "${var.author}-sg"
  }
}

resource "aws_eip" "my_eip" {
  vpc      = true
  instance = aws_instance.frazer-ec2.id
}
